--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "7b2f00ef",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
       "https://www.amazon.es/dp/1060694 not available\n",
       "https://www.amazon.fr/dp/1060694 not available\n",
       "https://www.amazon.de/dp/1061305 not available\n",
-      "Completed 100 iterations in 0.6739025115966797\n",
+      "Completed 100 iterations in 133.60149025917053\n",
       "https://www.amazon.fr/dp/1061305 not available\n",
       "https://www.amazon.de/dp/1063685 not available\n",
       "https://www.amazon.fr/dp/1063685 not available\n",
@@ -505,7 +505,7 @@
       "https://www.amazon.it/dp/000108657X\n",
       "https://www.amazon.de/dp/000108660X\n",
       "https://www.amazon.fr/dp/000108660X\n",
-      "Completed 100 iterations in 4.2883687019348145\n",
+      "Completed 100 iterations in 144.94359588623047\n",
       "https://www.amazon.de/dp/000108688X\n",
       "https://www.amazon.fr/dp/000108688X\n",
       "https://www.amazon.de/dp/1087061 not available\n",
@@ -606,7 +606,7 @@
       "https://www.amazon.fr/dp/1100726 not available\n",
       "https://www.amazon.de/dp/1100742 not available\n",
       "https://www.amazon.fr/dp/1100742 not available\n",
-      "Completed 100 iterations in 0.7832303047180176\n",
+      "Completed 100 iterations in 115.03483748435974\n",
       "https://www.amazon.de/dp/1100777 not available\n",
       "https://www.amazon.fr/dp/1100777 not available\n",
       "https://www.amazon.de/dp/1102249 not available\n",
@@ -713,7 +713,7 @@
       "https://www.amazon.fr/dp/1144634 not available\n",
       "https://www.amazon.de/dp/1144685 not available\n",
       "https://www.amazon.fr/dp/1144685 not available\n",
-      "Completed 100 iterations in 0.35636067390441895\n",
+      "Completed 100 iterations in 79.04233241081238\n",
       "https://www.amazon.de/dp/1145452 not available\n",
       "https://www.amazon.fr/dp/1145452 not available\n",
       "https://www.amazon.de/dp/1147102 not available\n",
@@ -814,7 +814,7 @@
       "https://www.amazon.fr/dp/4161130 not available\n",
       "https://www.amazon.de/dp/4161149 not available\n",
       "https://www.amazon.fr/dp/4161149 not available\n",
-      "Completed 100 iterations in 0.37793827056884766\n",
+      "Completed 100 iterations in 96.3170177936554\n",
       "https://www.amazon.de/dp/4161262 not available\n",
       "https://www.amazon.fr/dp/4161262 not available\n",
       "https://www.amazon.de/dp/4161475 not available\n",
@@ -921,7 +921,7 @@
       "https://www.amazon.fr/dp/4169751 not available\n",
       "https://www.amazon.it/dp/4169751 not available\n",
       "https://www.amazon.de/dp/000416976X\n",
-      "Completed 100 iterations in 5.5616230964660645\n",
+      "Completed 100 iterations in 112.78434491157532\n",
       "https://www.amazon.fr/dp/000416976X\n",
       "https://www.amazon.de/dp/4169786 not available\n",
       "https://www.amazon.fr/dp/4169786 not available\n",
@@ -1022,7 +1022,7 @@
       "https://www.amazon.de/dp/4172736 not available\n",
       "https://www.amazon.fr/dp/4172736 not available\n",
       "https://www.amazon.de/dp/4172744 not available\n",
-      "Completed 100 iterations in 0.5417041778564453\n",
+      "Completed 100 iterations in 131.37202763557434\n",
       "https://www.amazon.fr/dp/4172744 not available\n",
       "https://www.amazon.de/dp/4172833 not available\n",
       "https://www.amazon.fr/dp/4172833 not available\n",
@@ -1129,7 +1129,7 @@
       "https://www.amazon.fr/dp/4176170 not available\n",
       "https://www.amazon.de/dp/4176324 not available\n",
       "https://www.amazon.fr/dp/4176324 not available\n",
-      "Completed 100 iterations in 0.3499152660369873\n",
+      "Completed 100 iterations in 86.49560165405273\n",
       "https://www.amazon.fr/dp/4176367 not available\n",
       "https://www.amazon.it/dp/4176367 not available\n",
       "https://www.amazon.fr/dp/4176421 not available\n",
@@ -1236,7 +1236,7 @@
       "https://www.amazon.fr/dp/4208625 not available\n",
       "https://www.amazon.de/dp/4209508 not available\n",
       "https://www.amazon.fr/dp/4209508 not available\n",
-      "Completed 100 iterations in 0.408017635345459\n",
+      "Completed 100 iterations in 91.49196720123291\n",
       "https://www.amazon.de/dp/4209656 not available\n",
       "https://www.amazon.fr/dp/4209656 not available\n",
       "https://www.amazon.de/dp/4210778 not available\n",
@@ -1337,15 +1337,15 @@
       "https://www.amazon.fr/dp/4485742 not available\n",
       "https://www.amazon.de/dp/4486072 not available\n",
       "https://www.amazon.fr/dp/4486072 not available\n",
-      "Completed 100 iterations in 2.654276132583618\n"
+      "Completed 100 iterations in 82.46513247489929\n"
      ]
     }
    ],
    "source": [
     "driver = webdriver.Chrome(\"chromedriver\")\n",
-    "\n",
+    "start = time.time()\n",
     "for id,row in df.iterrows():\n",
-    "    start = time.time()\n",
+    "    \n",
     "    country = row[\"country\"]\n",
     "    Asin = row[\"Asin\"]\n",
     "    link = 'https://www.amazon.'+country+'/dp/'+Asin\n",
@@ -1387,7 +1387,8 @@
     "\n",
     "    if(row[\"Unnamed: 0\"]%100 == 99):\n",
     "        end = time.time()\n",
-    "        print(f'Completed 100 iterations in {end-start}')\n"
+    "        print(f'Completed 100 iterations in {end-start}')\n",
+    "        start = time.time()\n"
    ]
   },
   {
